// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="css-mtywj3"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="css-mtywj3"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Input with event handlers 1`] = `
<input
  className="css-1ee9933"
  onBlur={[Function]}
  onChange={[Function]}
/>
`;
